@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-12-06T00:39:54Z",
+  "timestamp" : "2024-12-07T00:39:12Z",
   "count_outdated" : 509,
   "uniques_outdated" : 336,
-  "count" : 510,
-  "uniques" : 337,
+  "count" : 511,
+  "uniques" : 338,
   "clones" : [
     {
       "timestamp": "2024-12-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
