@@ -1,9 +1,14 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 2,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2024-12-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
